Make small edits

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@ Portfolio
 <h2 class="center">Nathan Kulzer</h2>
 <hr>
 </div>
-<p class="center">Middle click images to enlarge</p>
+<p class="center">Right click images to enlarge, then Ctrl-S to save</p>
 
 <div class="mainbox" id="shufCont">
   <div class="image-showcase">
   <h3>Monochromatic Collage</h3>
-    <img src="NK_MonoCollage.jpg">
+    <img src="MonoCollage.jpg">
   </div>
   <div class="image-showcase">
   <h3>Propaganda Poster</h3>
-    <img src="GVYIVKG.jpg">
+    <img src="Propaganda.jpg">
   </div>
   <div class="image-showcase">
   <h3>Edible Architecture</h3>
     <div class="rel">
-    <img src="https://placekitten.com/g/300/200?nocache=4989854">
-    <div class="ib allcenter back">I forgot to submit. Have a cat instead?</div>
+    <img class="inject-placekitten" src="https://placekitten.com/g/300/200?nocache=4989854">
+    <div class="ib allcenter back">No image yet...</div>
     </div>
   </div>
   <div class="image-showcase">
   <h3>Digital Painting</h3>
     <div class="rel">
-    <img src="https://placekitten.com/g/300/200?nocache=243434">
-    <div class="ib allcenter back">I forgot to submit. Have a cat instead?</div>
+    <img class="inject-placekitten" src="https://placekitten.com/g/300/200?nocache=243434">
+    <div class="ib allcenter back">I lost the file for this.</div>
     </div>
   </div>
   
